syntax = "proto3";

option go_package="/pb";

package user;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// User define a user
message User {
  string username = 1;
  string password = 2;
}

// CreateRequest is the request for creating a user.
message CreateRequest {
  User user = 1;
}

// GetRequest is the request for getting a user.
message GetRequest {
  string username = 1;
}

// GetRequest is the response for getting a user.
message GetResponse {
  User user = 1;
}

// UserService is the user service.
service UserService {
  // Create a new user
  rpc Create(CreateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }
  // Get a specified user
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/{username}"
    };
  }
}